vlib/v/checker/tests/for_in_range_narrow_type_overflow_u64_literal_err.vv
fn main() {
	for b in u8(0) .. 9223372036854775808 {
		println(b)
	}
}
